--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="./paginas/locales.html" class="main-menu__link">Locales</a>
           </li>
           <li class="main-menu__item">
-            <a href="D:\CODOACODO\BACK\proyecto\productos.html" class="main-menu__link">Back</a>
+            <a href="D:\CODOACODO\BACK\proyecto\index.html" class="main-menu__link">Back</a>
           </li>
         </ul>
       </nav>
